# PyObsidianRPG

./: README.md  pyproject.toml
notebooks/: test.ipynb
src/pyobsidianrpg/: markdown.py  obsidian.py  organizations.py
